<resources>
    <string name="app_name">EXIBINE</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="message_here">message here</string>
    <string name="please_reply">Please reply</string>
    <string name="share_pic">Share Pic</string>
    <string name="more_details">More Details</string>
    <string name="request_qua">Request Qua.</string>
    <string name="approx_price">Approx Price?</string>
    <string name="hi_manish">Hi Manish</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="city">City</string>
    <string name="company_name">Company Name</string>
    <string name="company_video">Company Video</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="education">Education</string>
    <string name="about">About</string>
    <string name="update_profile">Update Profile</string>
    <string name="back">Back</string>
    <string name="about_us">About Us</string>
    <string name="sell_faster_now">PAY &amp; SELL FASTER NOW</string>
    <string name="pay">Pay</string>
    <string name="all_country">All Country</string>
    <string name="what_are_you_looking_for">What are you looking for ?</string>
    <string name="view_all">View All</string>
    <string name="important_supplies">Important Supplies</string>
    <string name="hotel_suggestions">Hotel Suggestions</string>
    <string name="chat">Chat</string>
    <string name="contact_us">Contact Us</string>
    <string name="phone_number">Phone Number</string>
    <string name="whatsapp_number">Whatsapp Number</string>
    <string name="website">Website</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_the_email_address_with_your_account_and_we_will_send_an_email_with_instruction_to_reset_your_password">Enter the email address with your account and we will send an email with instruction to reset your password.</string>
    <string name="send_email">Send email</string>
    <string name="language">Language</string>
    <string name="your_selected_location">Your Selected Location</string>
    <string name="detect_my_location">Detect my location</string>
    <string name="search_product">Search Product</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="replies">Replies</string>
    <string name="my_ads">My Ads</string>
    <string name="post_ad">Post Ad</string>
    <string name="lead_manager">Lead Manager</string>
    <string name="favorites">Favorites</string>
    <string name="messages">Messages</string>
    <string name="delete_all">Delete All</string>
    <string name="payment_method">Payment Method</string>
    <string name="choose_payment_method">Choose Payment Method</string>
    <string name="card_payment">Card Payment</string>
    <string name="pay_with_visa_master_card_or_any_credit_card_or_debit_card">Pay with VISA, Master Card or any credit card or debit card</string>
    <string name="include_some_details">Include Some details</string>
    <string name="add_title">Add title *</string>
    <string name="describe_what_you_are_selling">Describe what you are selling</string>
    <string name="next">Next</string>
    <string name="review_your_details">Review your details</string>
    <string name="name">Name</string>
    <string name="mobile">Mobile</string>
    <string name="company">Company</string>
    <string name="upload_your_photo">Upload your photo</string>
    <string name="upload_more_photos_increase_your_chance_of_closing_a_deal">Upload more photos increase your chance of closing a deal</string>
    <string name="take_a_picture">Take a Picture</string>
    <string name="folder">Folder</string>
    <string name="congratulation">CONGRATULATION!</string>
    <string name="your_add_will_go_live_shortly">CONGRATULATION! Your Add will go live after payment</string>
    <string name="reach_more_buyers_and_sell_faster">Reach more buyers and sell faster</string>
    <string name="preview_ad">Preview AD</string>
    <string name="set_a_price">Set a price</string>
    <string name="price">Price</string>
    <string name="confirm_your_location">Confirm your location</string>
    <string name="location">Location</string>
    <string name="enter_address">Enter Address</string>
    <string name="assistant_for_help">Assistant for help</string>
    <string name="i_just_need_to_know_a_few_things_first">I just need to know a few things first</string>
    <string name="what_is_the_required_quantity">What is the required Quantity ?</string>
    <string name="enter_quantity">Enter quantity</string>
    <string name="let_us_provide_you_nverified_sellers">Let Us Provide You\nverified Sellers</string>
    <string name="preview">Preview</string>
    <string name="pending">Pending</string>
    <string name="description">Description</string>
    <string name="ad_posted_at">Ad Posted at</string>
    <string name="home">Home</string>
    <string name="i_am_interested_in_designer_pvc_modualr">I am interested in designer PVC Modualr</string>
    <string name="call_now">Call Now</string>
    <string name="about_the_seller">About the Seller</string>
    <string name="recommended_products">Recommended Products</string>
    <string name="get_best_price_for_you_requirement">Get Best Price for you requirement</string>
    <string name="rate_amp_review"><![CDATA[Rate & Review]]></string>
    <string name="enter_your_review_here">Enter your review here</string>
    <string name="submit">Submit</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_new_password">Create new password</string>
    <string name="your_new_password_must_be_different_from_previous_passwords">Your new password must be different from previous passwords.</string>
    <string name="search_here">Search here</string>
    <string name="sort_by">Sort by</string>
    <string name="filters">Filters</string>
    <string name="explore">Explore</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="verify">Verify</string>
    <string name="share_catlog">Share Catlog</string>
    <string name="get_best_deal">Get Best Deal</string>
    <string name="change">Change</string>
    <string name="check_in">Available On</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="_5_star">5 Star</string>
    <string name="_4_star">4 Star</string>
    <string name="_3_star">3 Star</string>
    <string name="_2_star">2 Star</string>
    <string name="_1_star">1 Star</string>
    <string name="budget">BUDGET</string>
    <string name="_1_to_500" translatable="false">$1 to 500</string>
    <string name="_501_to_1000" translatable="false">$501 to 1000</string>
    <string name="apply">Apply</string>
    <string name="categories">Categories</string>
    <string name="deals_of_the_day">Deals of the day</string>
    <string name="products_of_your_interest">Products of your Interest</string>
    <string name="shopping">Shopping</string>
    <string name="hotel_amp_stay">Hotel &amp; Stay</string>
    <string name="automobile">Automobile</string>
    <string name="relevance">Relevance</string>
    <string name="rating">Rating</string>
    <string name="popular">Popular</string>
    <string name="friends_rating">Friends Rating</string>
    <string name="highest_price">Highest price</string>
    <string name="lowest_price">Lowest price</string>
    <string name="apikey">AIzaSyBYEt2cAgyU_Im4q4UQzjyBE_XUfUSo68E</string>
</resources>