<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".activity.PostAdSuccessActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:background="@drawable/common_top_bg"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="15dp"
        android:paddingBottom="15dp">

        <ImageView
            android:id="@+id/image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/success" />

        <com.ubi.android.utils.ui.PoppinsMediumTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/congratulation"
            android:textColor="@color/white"
            android:textSize="25dp" />

        <com.ubi.android.utils.ui.PoppinsMediumTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:text="@string/your_add_will_go_live_shortly"
            android:textColor="@color/white"
            android:textSize="14dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="15dp"
        android:paddingBottom="15dp">

        <com.ubi.android.utils.ui.PoppinsMediumTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/reach_more_buyers_and_sell_faster"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:src="@drawable/successbottomimg" />

        <com.ubi.android.utils.ui.PoppinsMediumButton
            android:id="@+id/sellbtn"
            android:layout_width="200dp"
            android:layout_height="55dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:background="@drawable/sellfasternowbg"
            android:text="@string/sell_faster_now"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="13dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <com.ubi.android.utils.ui.PoppinsRegularTextView
                android:id="@+id/applybtn"
                android:layout_width="200dp"
                android:layout_height="55dp"
                android:background="@drawable/paybtn"
                android:gravity="center"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/preview_ad"
                android:textColor="@color/white"
                android:textSize="14dp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>