<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.PostAdFirstStepActivity">

    <include layout="@layout/top_back_lay" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp">

        <com.ubi.android.utils.ui.PoppinsBoldTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_a_price"
            android:textColor="@color/black"
            android:textSize="18dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="0dp"
            android:background="@drawable/edittextpostbg"
            android:orientation="horizontal"
            android:padding="13dp">

            <com.ubi.android.utils.ui.PoppinsMediumEditTextView
                android:id="@+id/pricetv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:hint="@string/price"
                android:inputType="number"
                android:maxLength="64"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textColorHint="#707070"
                android:textSize="13dp" />

        </LinearLayout>

        <com.ubi.android.utils.ui.PoppinsMediumTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/confirm_your_location"
            android:textColor="@color/black"
            android:textSize="13dp" />

        <LinearLayout
            android:id="@+id/locationlay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:background="@drawable/edittextpostbg"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <com.ubi.android.utils.ui.PoppinsRegularTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location"
                    android:textColor="#616161"
                    android:textSize="13dp" />

                <com.ubi.android.utils.ui.PoppinsRegularTextView
                    android:id="@+id/locationtxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="#616161"
                    android:textSize="13dp" />

            </LinearLayout>

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/rightarrow" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="0dp"
            android:background="@drawable/edittextpostbg"
            android:orientation="horizontal"
            android:padding="13dp">

            <com.ubi.android.utils.ui.PoppinsMediumEditTextView
                android:id="@+id/fulllocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@color/transparent"
                android:hint="@string/enter_address"
                android:inputType="textPostalAddress"
                android:maxLength="64"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textColorHint="#707070"
                android:textSize="13dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <com.ubi.android.utils.ui.PoppinsRegularTextView
                android:id="@+id/applybtn"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="@drawable/applybtn"
                android:gravity="center"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/next"
                android:textColor="@color/white"
                android:textSize="13dp" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>