<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".activity.PostAdSuccessActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/common_top_bg"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="15dp"
        android:paddingBottom="15dp">

        <ImageView
            android:id="@+id/image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/success" />

        <com.ubi.android.utils.ui.PoppinsMediumTextView
            android:id="@+id/titletv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/congratulation"
            android:textColor="@color/white"
            android:textSize="25dp" />

        <com.ubi.android.utils.ui.PoppinsMediumTextView
            android:id="@+id/subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-10dp"
            android:text="@string/your_add_will_go_live_shortly"
            android:textColor="@color/white"
            android:textSize="17dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <com.ubi.android.utils.ui.PoppinsRegularTextView
                android:id="@+id/homebtn"
                android:layout_width="200dp"
                android:layout_height="55dp"
                android:background="@drawable/paybtn"
                android:gravity="center"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/preview_ad"
                android:textColor="@color/white"
                android:textSize="14dp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>